--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
@@ -36,14 +36,14 @@
       from the drop down menu in the title bar of the view.</p></li>
   <li>From the pop-up menu for the selected folders, select one of the following:
     <ol type="a">
-      <li><b>Checkout as Project</b> to check out each of the selected folders 
+      <li><b>Check Out as Project</b> to check out each of the selected folders 
         as a project in the local workspace with the same name as the folder in 
         the repository.</li>
-      <li><b>Checkout As...</b> to check out the selected folder into a custom configured 
+      <li><b>Check Out As...</b> to check out the selected folder into a custom configured 
         project in the local workspace. <em>Note:</em> This option is only enabled
         for single folders.</li>
     </ol></li>
-  <li>If <b>Checkout As...</b> was chosen, one of two possible dialogs is displayed 
+  <li>If <b>Check Out As...</b> was chosen, one of two possible dialogs is displayed 
     depending on whether the folder in the repository contains a .project file 
     or not. 
     <ol type="a">
