--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -7,7 +7,7 @@
 <br>
 <a href="tips-2.htm">Templates </a>
 <br>
-<a href="tips-3.htm">Type Hierarchy </a>
+<a href="tips-3.htm"> Hierarchy view</a>
 <br>
 <a href="tips-5.htm">Search </a>
 <br>
@@ -15,13 +15,14 @@
 <br>
 <a href="tips-7.htm">Java Editor </a>
 <br>
+<a href="tips-12.htm">Refactoring and restructuring</a>
+<br>
 <a href="tips-9.htm">Java Project Classpath </a>
 <br>
 <a href="tips-10.htm">JUnit </a>
 <br>
 <a href="tips-11.htm">Miscellaneous </a>
 <br>
-
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
