--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -6,13 +6,18 @@
 <h1 class="Head">JUnit</h1>
 
 <ul>
-  <li>You can change a test and re-run it without having to re-run the entire suite
-. To do so you have to enable the <i>Keep JUnit running after a test run when debugging</i>
-checkbox on the Launch Configuration page and to run in Debug mode. Your VM has to support hot code replace for this feature.</li>
-  <li>You can set the JUnit view as a fast view and have it show the results only 
-    where there are failures or errors. Select the <b>Window &gt; Preferences 
-    &gt; Java &gt; JUnit &gt; Show the JUnit results view only when an error or 
-    failure occurs</b> checkbox.</li>
+  <li>
+    <p>You can change a test and re-run it without having to re-run the entire 
+      suite . To do so you have to enable the <b>Keep JUnit running after a test 
+      run when debugging</b> checkbox on the Launch Configuration page and to 
+      run in Debug mode. Your VM has to support hot code replace for this feature.</p>
+  </li>
+  <li>
+    <p>You can set the JUnit view as a fast view and have it show the results 
+      only where there are failures or errors. Select the <b>Window &gt; Preferences 
+      &gt; Java &gt; JUnit &gt; Show the JUnit results view only when an error 
+      or failure occurs</b> checkbox.</p>
+  </li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
