--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -8,15 +8,21 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Type Hierarchy</H1>
+<H1 CLASS="Head">Hierarchy view</H1>
 <P>&nbsp;</P>
 <ul>
-  <li>You can open the Type Hierarchy not only on types but also on packages, 
-    source folders, JARs and Java projects.</li>
-  <li>You can drag and drop an element over the the  Hierarchy view to focus 
-    it on that element.</li>
-  <li>You can change the orientation (from the default vertical to horizontal) 
-    of the Hierarchy view by using the Menu toolbar button.</li>
+  <li>
+    <p>You can open the Hierarchy view not only on types but also on packages, 
+      source folders, JARs and Java projects.</p>
+  </li>
+  <li>
+    <p>You can drag-and-drop an element onto the Hierarchy view to focus it on 
+      that element.</p>
+  </li>
+  <li>
+    <p>You can change the orientation (from the default vertical to horizontal) 
+      of the Hierarchy view by using the Menu toolbar button.</p>
+  </li>
 </ul>
 
 <p><br>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
