--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-9.htm
@@ -10,21 +10,32 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Java project classpath</H1>
 <ul>
-  <li>To see / set up the build-time classpath for your project, select the project, 
-    open the pop-up menu, choose <b>Properties</b> and go to <b>Java Build Path</b>.</li>
-  <li>By default, the run-time classpath for projects is the same as the build-time 
-    classpath. You can change it by editing a Launch Configuration (Select <b>Run 
-    &gt; Run</b> from the menu bar).</li>
-  <li>By default, the Java builder copies all resources from your project to the 
-    build output folder (typically called 'bin'). You can exclude some resources 
-    and resource types by setting your preference in <b>Window &gt; Preferences 
-    &gt; Compiler &gt; Other</b>.</li>
-  <li>You can put your files on the classpath without placing them in a source 
-    folder: 
+  <li>
+    <p>To see / set up the build-time classpath for your project, select the project, 
+      open the pop-up menu, choose <b>Properties</b> and go to <b>Java Build Path</b>.</p>
+  </li>
+  <li>
+    <p>By default, the run-time classpath for projects is the same as the build-time 
+      classpath. You can change it by editing a Launch Configuration (Select <b>Run 
+      &gt; Run</b> from the menu bar).</p>
+  </li>
+  <li>
+    <p>By default, the Java builder copies all resources from your project to 
+      the build output folder (typically called <i>bin</i>). You can exclude some 
+      resources and resource types by setting your preference in <b>Window &gt; 
+      Preferences &gt; Compiler &gt; Other</b>.</p>
+  </li>
+  <li>
+    <p>You can put your files on the classpath without placing them in a source 
+      folder: </p>
     <ul>
-      <li>Put them in a class folder by using <b>Java Build Path &gt; Libraries 
-        &gt; Advanced</b> on the project's <b>Properties</b></li>
-      <li>Alternatively, you can put them in a JAR and add the JAR to the classpath<b>.</b><br>
+      <li>
+        <p>Put them in a class folder by using <b>Java Build Path &gt; Libraries 
+          &gt; Advanced</b> on the project's <b>Properties</b></p>
+      </li>
+      <li>
+        <p>Alternatively, you can put them in a JAR and add the JAR to the classpath<b>.</b><br>
+        </p>
       </li>
     </ul>
   </li>
