--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -9,23 +9,35 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Search</H1>
-<p>&nbsp;</p>
 <p>To search for methods with a certain return type: </p>
-<ul>
-  <li>Open the search dialog</li>
-  <li>Switch to <strong>Java Search</strong> tab</li>
-  <li>Type in the search expression: '* X' (without the quotes, and with a space 
-    between the wild-card and X, where X is your return type)</li>
-  <li>Select <strong>Method</strong> and <strong>Declarations</strong></li>
-  <li>Use a working set to make the search faster.</li>
-  <li>Press <strong>Search</strong> <br>
+<ol>
+  <li>
+    <p>Open the search dialog.</p>
   </li>
-</ul>
+  <li>
+    <p>Switch to <strong>Java Search</strong> tab.</p>
+  </li>
+  <li>
+    <p>Type in the <b>Search string</b>: '* X' (without the quotes, and with a 
+      space between the wild-card and X, where X is your return type).</p>
+  </li>
+  <li>
+    <p>Select <strong>Method</strong> and <strong>Declarations.</strong></p>
+  </li>
+  <li>
+    <p>Use a working set to make the search faster..</p>
+  </li>
+  <li>
+    <p>Press <strong>Search</strong> .<br>
+    </p>
+  </li>
+</ol>
+<p>&nbsp;</p>
 <p>You can do global Find and Replace:</p>
-<ul>
-  <li>First do a File search (choose the File tab in the search dialog). Then 
-    right-click in the search results in the Search view to see the <b>Replace</b> 
-    and <b>Replace Selected</b> pop-up menu items.</li>
-</ul>
+<ol>
+  <li>Do a File search (choose the <b>File</b> tab in the search dialog).</li>
+  <li>Right-click on an entry in the Search view and use the <b>Replace</b> or 
+    <b>Replace Selected</b> from the pop-up menu.</li>
+</ol>
 &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></BODY>
 </HTML>
