--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -15,7 +15,7 @@ Creating a new interface</h1>
 
 <div class="para">Use the New Java Interface wizard to create a new Java
 interface. There are a number of ways to open this wizard:</div>
-
+<p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -24,7 +24,7 @@ Select the container where you want the new class to reside.</li>
 Click the&nbsp;<span class=label><b>Create a Java Interface</b></span>
 button in the workbench toolbar.</li>
 </ol>
-or
+<p>&nbsp; or</p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -32,7 +32,7 @@ Select the container where you want the new class to reside.</li>
 <li class="MsoNormal" style="     ">
 From the container's pop-up menu, select <b>New</b> > <b>Interface</b>.</li>
 </ol>
-or
+<p>&nbsp; or</p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -41,13 +41,12 @@ Select the container where you want the new class to reside.</li>
 From the drop-down menu on the&nbsp;<span class=label><b>Open The New Wizard</b></span>
 button in the workbench toolbar, select <b>Interface</b>.</li>
 </ol>
-or
-
-<p class="MsoNormal">&nbsp;&nbsp;&nbsp; Click the&nbsp;<span class=label><b>Open
+<p>&nbsp; or</p>
+<p class="MsoNormal">&nbsp; Click the&nbsp;<span class=label><b>Open
 The New Wizard</b></span> button. In the left pane, select <b>Java</b>,
 and in the right pane, select <b>Interface</b>.
-<p>or
-  <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new interface 
+<p>&nbsp; or</p>
+  <p>&nbsp; Select the container where you want the new interface 
     to reside. Then, from the menu bar select <b>File</b> > <b>New</b> > <b>Interface</b> 
   <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
