--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -9,28 +9,26 @@
 </head>
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 
-<div class=Section1>
 <h1>
 Filtering elements</h1>
 
 <div class="para">To filter elements:</div>
 
-<ol start=1 type=1>On the Package Explorer toolbar, click the <b>Menu</b>
-button and choose <b>Filters</b>.
-<p>Select or clear the filters that you want to apply to the view (read
-<b>Filter Description </b>to learn about the selected filter’s functionality).
-<p>Optionally, you can select patterns for filtering the view:</ol>
-</div>
+<ol start=1 type=1>
+<li><p>On the Package Explorer toolbar, click the <b>Menu</b>
+button and choose <b>Filters</b>.</p></li>
+<li><p>Select or clear the filters that you want to apply to the view (read
+<b>Filter Description </b>to learn about the selected filter’s functionality).</p></li>
+<li><p>Optionally, you can select patterns for filtering the view:</p></li>
+
 
 <ul>
-<li>
-Select the <b>Name filter patterns</b> checkbox at the top of the dialog.</li>
+<li><p>Select the <b>Name filter patterns</b> checkbox at the top of the dialog.</p></li>
 
-<li>
-In the text field below, specify the desired patterns (names matching one
-of the patterns will be hidden).</li>
+<li><p>In the text field below, specify the desired patterns (names matching one
+of the patterns will be hidden).</p></li>
 </ul>
-
+</ol>
 <div class=Section1><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-3.htm">Java projects</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
