--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -16,17 +16,15 @@ Generating getters and setters</h1>
 <div class="para">The Java editor allows you to generate accessors ("getters
 and setters") for the fields of a type inside a compilation unit.</div>
 
-
-<p class="para">1. In the editor, select the field for which you want to
-generate accessors (or a type in which you want to create these methods).
-
-<p class="para">2. Select <b>Generate Getter and Setter</b> from the <b>Source</b>
-pop-up menu.
-
-  <p class="para">3. A dialog will open to let you select which methods you want 
-    to create. 
-  <p class="para">4. Select the methods and press OK.
-
+  <ol>
+    <li><p class="para">In the editor, select the field for which you want to generate 
+      accessors (or a type in which you want to create these methods). </p></li>
+    <li><p class="para">Select <b>Generate Getter and Setter</b> from the <b>Source</b> 
+      pop-up menu. </p></li>
+    <li><p class="para">A dialog will open to let you select which methods you want 
+      to create. </p></li>
+    <li><p class="para">Select the methods and press OK. </p></li>
+  </ol>
 <p class="para"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
 <br><a href="../concepts/concepts-3.htm">Java projects</a>
