--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -9,37 +9,34 @@
 </head>
 <body bgcolor="#FFFFFF" link="#0000FF" vlink="#0000FF" lang="EN-US">
 
-<div class=Section1>
 <h1>
 Adding required import statements</h1>
 
 <div class="para">The Java editor can help you add required import statements
 for a selected type inside a compilation unit.</div>
+<ol>
+<li><p class="para">
+Select a reference to a type in your Java code, and do one of the following:</p></li>
 
-<br>&nbsp;
-<li class="para">
-Select a reference to a type in your Java code, and do one of the following:</li>
-
-<ol start=1 type=1>
 <ul type=circle>
-<li class="MsoNormal">
-Select <b>Source ></b>&nbsp;<span class=label><b>Add Import</span></b>
-from the pop-up menu in the editor</li>
+<li><p>
+Select <b>Source ></b>&nbsp;<span class=label><b>Add Import</b></span>
+from the pop-up menu in the editor</p></li>
 
-<li class="MsoNormal">
-Select <b>Source</b> > <b>Add Import</b> from the menu bar.</li>
+<li><p>
+Select <b>Source</b> > <b>Add Import</b> from the menu bar.</p></li>
 
-<li class="MsoNormal">
+<li>
 Press <b>Ctrl</b>+<b>Shift</b>+<b>M</b></li>
 </ul>
 
-<li class="MsoNormal" style="     ">
+<li><p>
 Either the editor can identify the type or you are prompted to choose the
-desired type from a list of possible types.</li>
+desired type from a list of possible types.</p></li>
 
-<li class="para">
+<li><p>
 The import statement is generated and inserted as specified by the import
-order preference.</li>
+order preference.</p></li>
 </ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
@@ -51,7 +48,7 @@ order preference.</li>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
 <br><a href="../reference/ref-menu-source.htm">Source menu</a>
 <br>&nbsp;
-<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 
 </body>
 </html>
