--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -12,16 +12,16 @@
 <div class=Section1>
 <h1>
 Showing single elements or whole Java files</h1>
-
-  <div class="para">To display the selected Java file in a single element view, 
+<ul>
+  <li><p class="para">To display the selected Java file in a single element view, 
     click the&nbsp;<span 
 class=label><b>Show Source of Selected Element Only</b></span> button in the workbench 
-    toolbar, so that it is pressed.</div>
+    toolbar, so that it is pressed.</p></li>
 
-  <div class="para">To display the selected Java file in a whole (non-segmented) 
+  <li><p class="para">To display the selected Java file in a whole (non-segmented) 
     view, click the&nbsp;<span class=label><b>Show Source of Selected Element 
-    Only</b></span> button in the workbench toolbar, so that it is not pressed.</div>
-
+    Only</b></span> button in the workbench toolbar, so that it is not pressed.</p></li>
+</ul>
 <p><b>Note:</b> this toolbar button is enabled only when a Java editor
 is open.
 
