--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -15,7 +15,7 @@ Creating a new Java class</h1>
 
 <div class="para">Use the New Java Class wizard to create a new Java class.
 There are a number of ways to open this wizard:</div>
-
+<p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -24,7 +24,7 @@ Select the container where you want the new class to reside.</li>
 Click the&nbsp;<span class=label><b>Create a Java Class</b></span> button
 in the workbench toolbar.</li>
 </ol>
-or
+<p>&nbsp; or</p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -32,7 +32,7 @@ Select the container where you want the new class to reside.</li>
 <li class="MsoNormal" style="     ">
 From the container's pop-up menu, select <b>New</b> > <b>Class</b>.</li>
 </ol>
-or
+<p>&nbsp; or</p>
 <ol start=1 type=1>
 <li class="MsoNormal" style="     ">
 Select the container where you want the new class to reside.</li>
@@ -41,13 +41,12 @@ Select the container where you want the new class to reside.</li>
 From the drop-down menu on the&nbsp;<span class=label><b>Open The New Wizard</b></span>
 button in the workbench toolbar, select <b>Class</b>.</li>
 </ol>
-or
-
-<p class="MsoNormal">&nbsp;&nbsp;&nbsp; Click the&nbsp;<span class=label><b>Open
+<p>&nbsp; or</p>
+<p class="MsoNormal">&nbsp; Click the&nbsp;<span class=label><b>Open
 The New Wizard</b></span> button. In the left pane, select <b>Java</b>,
-and in the right pane, select <b>Class</b>.
-<p>or
-  <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new class to reside. 
+and in the right pane, select <b>Class</b>.</p>
+<p>&nbsp; or</p>
+  <p>&nbsp; Select the container where you want the new class to reside. 
     Then, select from the menu bar <b>File</b> > <b>New</b> > <b>Class</b>. 
   <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
