--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -26,7 +26,7 @@ from the    repository. </p>
 <p class="Intro">Versioning a project saves the line-up of all resource versions 
    in the project. Resources other than projects (that is, files and folders) 
 can    be versioned.&nbsp; However, it is more common to version entire projects 
-together    as the resources contained in a project are often highly interdependant. 
+together    as the resources contained in a project are often highly interdependent. 
 Projects    can be versioned from the workspace or from the branch (including HEAD) in the 
 CVS Repositories    view. The difference between these two approaches is in
 deciding which child    resource versions should be part of the project version.
