Fixed spelling errors

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -29,7 +29,7 @@
 <div class="Section1">
   <p><span style="font-size: 10pt; font-family: Arial; ">The Java editor can be 
     configured to either show an entire compilation unit or a single Java element 
-    only. Tto change the setting, use the toolbar button <b>Show Source of Selected 
+    only. To change the setting, use the toolbar button <b>Show Source of Selected 
     Element Only</b>.</span></p>
   <p>&nbsp;</p>
 </div>
