--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -8,7 +8,7 @@
 
 <div class=Section1>
   <h1> Templates</h1>
-    <p>Templates are often reoccuring source code patterns.
+    <p>Templates are often reoccurring source code patterns.
   <p>The JDT offers support for creating, managing and using templates.
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0">
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
