--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -55,7 +55,7 @@
 
           The Outline view also indicates whether a Java element
           is static, abstract, final, etc. The outline view also shows you whether
-		  a method is overridden from a base class (<img src="../images/org.eclipse.jdt.ui/ovr16/over_co.gif" alt="overriden" />) or when it implements a method
+		  a method is overridden from a base class (<img src="../images/org.eclipse.jdt.ui/ovr16/over_co.gif" alt="overridden" />) or when it implements a method
 		  from an interface (<img src="../images/org.eclipse.jdt.ui/ovr16/implm_co.gif" alt="implements" />).
         </p>
 
@@ -332,7 +332,7 @@ assert</pre>
           With the content assist window still active, type the letter
           't' after <code>assert</code> (with no space in between).
           The list is narrowed and only shows entries starting with
-          'assertt'.
+          'assert'.
         </p>
 
         <p>
