--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -231,7 +231,7 @@ line will disappear as the correction is applied.</td>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="../tasks/tasks-54.htm">Using the Java editor</a>
 <br><a href="../tasks/tasks-69.htm">Viewing documentation and information</a>
-<br><a href="../tasks/tasks-175.htm">Using QuickFix</a><a href="../tasks/tasks-106.htm"></a>
+<br><a href="../tasks/tasks-175.htm">Using quick fix</a><a href="../tasks/tasks-106.htm"></a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
 <p><a href="../reference/ref-21.htm">Editor preference page</a>
 <br><a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a>
