--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -223,7 +223,7 @@ suggest method names without the prefix or suffix.</td>
 <p><a href="../tasks/tasks-6.htm">Java views</a>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
-<p><a href="../tasks/tasks-175.htm">Using QuickFix</a>
+<p><a href="../tasks/tasks-175.htm">Using quick fix</a>
 <br><a href="../tasks/tasks-11.htm">Creating Java elements</a>
 <br><a href="../tasks/tasks-43.htm">Overriding a method using the Hierarchy
 view</a>
