--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -34,7 +34,7 @@ for declarations and references.
 <ol>
 <ol>
     <li CLASS="Para"> Select a Java element (for example a Java compilation unit 
-      in the Package Expolorer or a method in the Outline view) or some text in 
+      in the Package Explorer or a method in the Outline view) or some text in 
       a Java editor.</li>
 
 <li CLASS="Para">
