--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
@@ -22,7 +22,7 @@ marker bar pop-up menu and select <b>Enable Breakpoint</b> or <b>Disable Breakpo
 </li>
 </ol>
 <ol>
-  <li>In the <b>Breakpoints view</b> select the breakpoint(s) to be enabled or diabled.</li>
+  <li>In the <b>Breakpoints view</b> select the breakpoint(s) to be enabled or disabled.</li>
   <li>
 <P CLASS="Para">
 In the context menu of the view, select <b>Enable</b> or <b>Disable</b>.
