--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -8,7 +8,7 @@
 <body bgcolor="#ffffff">
 
 <h1 class="Head"> Using Quick Fix</h1>
-To use the QuickFix feature:
+To use the quick fix feature:
 <ul>
 <li>
 You need to have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication
@@ -38,7 +38,7 @@ If you have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Ind
 selected, then light bulb icons appear on the left-hand side vertical ruler to 
 indicate Quick Fix'able problems. You can then click on one of the the light bulb 
 icons to invoke Quick Fix. 
-<p><b>Note:</b> Occassionally, invoking Quick Fix will not suggest any
+<p><b>Note:</b> Occasionally, invoking Quick Fix will not suggest any
 corrections. A message saying '<b>No suggestions available</b>' will be
 displayed in such cases.
 
