--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
@@ -11,7 +11,7 @@
 
 <h1 class="Head">
 Using Surround with Try/Catch</h1>
-To surround a statemnt or a set of statements with a try/catch block:
+To surround a statement or a set of statements with a try/catch block:
 <ul>
 <li>
 In the Java editor, select the statement or a set of statements that you
