--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -13,7 +13,7 @@
 To open the Externalize Strings wizard, do one of the following:
 <ul>
 <li>
-Find strings to externalize (using the <b>Find Strings To Enternalize</b>
+Find strings to externalize (using the <b>Find Strings To Externalize</b>
 function), select an entry in the resulting dialog and press the <b>Externalize</b>
 button or</li>
 
