--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -40,10 +40,10 @@ to externalize strings without previewing changes.</li>
 </ul>
 <b>Note: </b>The default behavior of the wizard (i.e. creating a class with a 
 name specified in the <b>Class name field</b> and using <b>getString</b> as the 
-name of the method used to retrieve strings from the property file) can be overriden. 
+name of the method used to retrieve strings from the property file) can be overridden. 
 You may want to do so if you already have an accessor class in another package 
 or your accessor class uses another method with another name to get strings from 
-the propetry file. 
+the property file. 
 <ul>
 <li>
 Unselect the <b>Use default substitution pattern</b> checkbox</li>
@@ -56,7 +56,7 @@ the key.</li>
 
 <li>
 Use the <b>Add import declaration</b> field if you want the wizard to add
-an addtional import to the compilation unit (you can use the <b>Browse</b>
+an additional import to the compilation unit (you can use the <b>Browse</b>
 button to help you find a class that you want to import.)</li>
 </ul>
 <img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
