--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -16,13 +16,13 @@ show their return types.
 <p>To show method return types in Java views:
 <ul>
 <li>
-Select the <b>Window > Preferences > Java > Apppearance > Show method return
+Select the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method return
 types</b> checkbox</li>
 </ul>
 To hide method return types in Java views:
 <ul>
 <li>
-Unselect the <b>Window > Preferences > Java > Apppearance > Show method
+Unselect the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method
 return types</b> checkbox</li>
 </ul>
 
