--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
@@ -32,7 +32,7 @@
   <li>In the <b>Package</b> field, enter the name of the package (empty name denotes 
     the default package) in which the test suite will be created.</li>
   <li>In the <b>Test suite</b> field, enter the name of the test suite class.</li>
-  <li>In the preseneted list of classes, select the test classes for which you 
+  <li>In the presented list of classes, select the test classes for which you 
     want to create the test suite.</li>
   <li>Press <b>Finish</b>.</li>
 </ol>
@@ -43,7 +43,7 @@
 </ul>
 <p><b>Note:</b> the wizard puts 2 special markers (<code>//$JUnit-BEGIN$</code> 
   and <code>//$JUnit-END$</code>) into the created Test suite class, which allows 
-  the wizard to update existing test suite classes. It is recommennded not to 
+  the wizard to update existing test suite classes. It is recommended not to 
   edit code that lies between the markers.</p>
 <h1><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159></h1>
 <a href="tasks-207.htm">Using JUnit</a><a href="tasks-207.htm"></a>
