--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -29,7 +29,7 @@
 <br><a href="tasks-172.htm">Converting line delimiters</a>
 <br><a href="tasks-173.htm">Finding and replacing</a>
 <br><a href="tasks-174.htm">Changing the encoding used to show the source</a>
-<br><a href="tasks-175.htm">Using QuickFix</a>
+<br><a href="tasks-175.htm">Using quick fix</a>
 <br><a href="tasks-176.htm">Using Structured Selection</a>
 <br><a href="tasks-177.htm">Commenting and uncommenting lines of code</a>
 <br><a href="tasks-178.htm">Shifting lines of code left and right</a>
