--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
@@ -45,12 +45,12 @@ you to select from the already defined JREs, and allows you to define new JREs.<
 <LI CLASS="Item">
 <p>The <b>Classpath</b> tab defines the location of class files used when running or debugging
 an application. By default, the user and bootstrap class locations are derived from the associated
-project's build path. However, these settings may be overriden if required.</p>
+project's build path. However, these settings may be overridden if required.</p>
 </LI>
 <LI CLASS="Item">
 <p>The <b>Source</b> tab defines the location of source files used to display source when
 debugging a Java application. By default, these settings are derived from the associated project's
-build path. However, these settings may be overriden if required.</p>
+build path. However, these settings may be overridden if required.</p>
 </LI>
 <LI CLASS="Item">
 <p>The <b>Common</b> tab defines the location of the launch configuration itself. By default, a launch
