--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -37,7 +37,7 @@
     </p>
   </li>
   <li>
-    <p>Simliarly, you can add a deleted method or field by using the local history.<br>
+    <p>Similarly, you can add a deleted method or field by using the local history.<br>
       Select a type in the Outline view and execute <b>Restore from Local History</b> 
       from the pop-up menu. </p>
   </li>
