--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
@@ -17,12 +17,12 @@ You can reorder method parameters.
 Select the method in a Java view (e.g. Outline, Package Explorer, Members).</li>
 
 <li>
-Do one of the following to open the Modify Paramaters refactoring wizard:</li>
+Do one of the following to open the Modify Parameters refactoring wizard:</li>
 
 <ul>
-    <li> From the menu bar, select <b>Refactor > Modify Paramaters</b> or</li>
+    <li> From the menu bar, select <b>Refactor > Modify Parameters</b> or</li>
 
-    <li> From the method's pop-up menu, select <b>Refactor > Modify Paramaters</b></li>
+    <li> From the method's pop-up menu, select <b>Refactor > Modify Parameters</b></li>
 </ul>
 </ul>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
