--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -18,11 +18,11 @@
 </div>
 <ul>
   <li> 
-    <div CLASS="FigureTitle">Select one or more paramaters</div>
+    <div CLASS="FigureTitle">Select one or more parameters</div>
   </li>
   <li>Use the <b>Move Up</b> and <b>Move Down</b> buttons to reorder the parameters 
-    (you can see a signature preview below the paramater list)</li>
-  <li>Press <b>Next</b> to see the preview or <b>Finish</b> to perfrom the refactoring 
+    (you can see a signature preview below the parameter list)</li>
+  <li>Press <b>Next</b> to see the preview or <b>Finish</b> to perform the refactoring 
     without seeing the preview</li>
 </ul>
 <div CLASS="XRefList">
