--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -19,7 +19,7 @@
     VM supports hot code replacement you can fix the code and rerun the test without 
     restarting the full test run. <br>
     Note: to set the preference, open the Launch configuration dialog, select 
-    the lanuch configuration for your test and select the <b>Keep JUnit running 
+    the launch configuration for your test and select the <b>Keep JUnit running 
     after a test run when debugging</b> checkbox .</li>
 </ol>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> 
