--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-37.htm
@@ -8,7 +8,7 @@
 
 <p><br><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <br><a href="tasks-38.htm">Changing the appearance of the Hierarchy view</a>
-<br><a href="tasks-39.htm">Opening a type hierarchy on a Java elemen</a>
+<br><a href="tasks-39.htm">Opening a type hierarchy on a Java element</a>
 <br><a href="tasks-40.htm">Opening a type hierarchy on the current text
 selection</a>
 <br><a href="tasks-42.htm">Opening a type hierarchy in its own perspective</a>
