--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -18,7 +18,7 @@ Select <b>Window</b> &gt; <b>Preferences</b> &gt; <b>Debug</b>.</li>
 <P CLASS="Para">
 Setting the <b> <SPAN CLASS="Label">
 Default perspective for Debug</SPAN></b>
- option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in debug mode. This default can be overriden in a launch configuration 
+ option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in debug mode. This default can be overridden in a launch configuration 
  by setting the <b><SPAN CLASS="Label">Perspective to switch to or open when launched in: &gt; Debug mode</SPAN></b> option found on the <b>Common</b> tab in the launch configuration dialog.
 <br>
 <br>
@@ -29,7 +29,7 @@ If the selected perspective is not open at the time, a perspective is created. I
 <P CLASS="Para">
 Setting the <b> <SPAN CLASS="Label">
 Default perspective for Run</SPAN></b>
- option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in run mode. This default can be overriden in a launch configuration 
+ option sets the selected perspective as the default perspective to become active automatically each time a launch configuration is launched in run mode. This default can be overridden in a launch configuration 
  by setting the <b><SPAN CLASS="Label">Perspective to switch to or open when launched in: &gt; Run mode</SPAN></b> option found on the <b>Common</b> tab in the launch configuration dialog.
 <br>
 <br>
